<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.cerkerli.library.view.TagLayout
        android:id="@+id/tag_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.cerkerli.library.view.TagView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/material_design"
            android:text="@string/material_design"
            android:textSize="24sp"/>

        <com.cerkerli.library.view.TagView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rx_java"
            android:text="@string/rxjava"
            android:textSize="24sp"/>

        <com.cerkerli.library.view.TagView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/gradle"
            android:text="@string/gradle"
            android:textSize="24sp"/>

        <com.cerkerli.library.view.TagView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/android_studio"
            android:text="@string/android_studio"
            android:textSize="24sp"/>

        <com.cerkerli.library.view.TagView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/kotlin"
            android:text="@string/kotlin"
            android:textSize="24sp"/>

        <com.cerkerli.library.view.TagView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/flutter"
            android:text="@string/flutter"
            android:textSize="24sp"/>

    </com.cerkerli.library.view.TagLayout>



</android.support.constraint.ConstraintLayout>